service/main/default/objects/Case/fields/FormCommunityUrl__c.field-meta.xml
<CustomField>
    <fullName>FormCommunityUrl__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Technical field for the Service Package. Form Community&#39;s URL stored in a custom label. The custom label cannot be used in the form auto-response email template because of a bug.</description>
    <formula>$Label.Service_FormCommunityUrl</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Community URL</label>
    <type>Text</type>
</CustomField>