service/main/default/objects/Case/fields/FormCompleted__c.field-meta.xml
<CustomField>
    <fullName>FormCompleted__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Technical field telling if the Service form has already been fulfilled.</description>
    <label>Form Completed</label>
    <type>Checkbox</type>
</CustomField>