service/main/default/objects/Case/fields/RequestSubtype__c.field-meta.xml
<CustomField>
    <fullName>RequestSubtype__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Service request subtype.</description>
    <label>Request Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Durée</fullName>
            </value>
            <value>
                <fullName>Kilométrage</fullName>
            </value>
            <value>
                <fullName>Durée et kilométrage</fullName>
            </value>
            <value>
                <fullName>Prestations</fullName>
            </value>
            <value>
                <fullName>Valeur de rachat</fullName>
            </value>
            <value>
                <fullName>Restitutions</fullName>
            </value>
            <value>
                <fullName>Adresses</fullName>
            </value>
            <value>
                <fullName>RIB</fullName>
            </value>
            <value>
                <fullName>Factures/Avoirs</fullName>
            </value>
            <value>
                <fullName>Contrat</fullName>
            </value>
            <value>
                <fullName>Echéancier</fullName>
            </value>
            <value>
                <fullName>Carte grise</fullName>
            </value>
            <value>
                <fullName>Je souscris à la prestation gestion carburant</fullName>
            </value>
            <value>
                <fullName>Je commande une ou plusieurs cartes</fullName>
            </value>
            <value>
                <fullName>Je résilie une ou plusieurs cartes</fullName>
            </value>
            <value>
                <fullName>Je déclare la perte, le vol ou l&#39;utilisation frauduleuse de ma carte</fullName>
            </value>
            <value>
                <fullName>Je n&#39;ai pas reçu mon certificat d&#39;immatriculation</fullName>
            </value>
            <value>
                <fullName>Je déclare un changement d&#39;adresse</fullName>
            </value>
            <value>
                <fullName>Je déclare un changement sur la situation de mon véhicule et/ou de mon entreprise</fullName>
            </value>
            <value>
                <fullName>J&#39;ai fait l&#39;objet d&#39;une usurpation de plaques</fullName>
            </value>
            <value>
                <fullName>Je souscris à la prestation conciergerie des immatriculations</fullName>
            </value>
            <value>
                <fullName>Je fais une demande sur la prestation conciergerie des immatriculations</fullName>
            </value>
            <value>
                <fullName>Je reçois une amende</fullName>
            </value>
            <value>
                <fullName>Je reçois une amende majorée</fullName>
            </value>
            <value>
                <fullName>Je reçois une amende étrangère</fullName>
            </value>
            <value>
                <fullName>Je souscris à la prestation gestion des amendes</fullName>
            </value>
            <value>
                <fullName>Je fais une demande sur la prestation gestion des amendes</fullName>
            </value>
            <value>
                <fullName>Je souscris à l&#39;assurance tous risques</fullName>
            </value>
            <value>
                <fullName>Je n&#39;ai pas reçu ma carte verte</fullName>
            </value>
            <value>
                <fullName>Je résilie l&#39;assurance tous risques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>