service/main/default/objects/Case/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Service request type.</description>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modifications contractuelles</fullName>
            </value>
            <value>
                <fullName>Valeur de rachat/Restitutions</fullName>
            </value>
            <value>
                <fullName>Modifications administratives</fullName>
            </value>
            <value>
                <fullName>Changement d’entité</fullName>
            </value>
            <value>
                <fullName>Duplicata</fullName>
            </value>
            <value>
                <fullName>Contestation de facture</fullName>
            </value>
            <value>
                <fullName>Frais de remise en état</fullName>
            </value>
            <value>
                <fullName>Loyer non arrêté</fullName>
            </value>
            <value>
                <fullName>Restitution</fullName>
            </value>
            <value>
                <fullName>Arrêt de l&#39;assurance</fullName>
            </value>
            <value>
                <fullName>Restitution anticipée</fullName>
            </value>
            <value>
                <fullName>Véhicule à enlever</fullName>
            </value>
            <value>
                <fullName>Expertise</fullName>
            </value>
            <value>
                <fullName>Remise en conformité du véhicule</fullName>
            </value>
            <value>
                <fullName>Désistement</fullName>
            </value>
            <value>
                <fullName>Détail de la facture</fullName>
            </value>
            <value>
                <fullName>Montant facturé</fullName>
            </value>
            <value>
                <fullName>Carburant</fullName>
            </value>
            <value>
                <fullName>Immatriculation des Véhicules</fullName>
            </value>
            <value>
                <fullName>Amendes</fullName>
            </value>
            <value>
                <fullName>Assurances</fullName>
            </value>
            <value>
                <fullName>Véhicule d&#39;attente</fullName>
            </value>
            <value>
                <fullName>Gestion de Parc</fullName>
            </value>
            <value>
                <fullName>Tarification</fullName>
            </value>
            <value>
                <fullName>Commande</fullName>
            </value>
            <value>
                <fullName>Avenant</fullName>
            </value>
            <value>
                <fullName>Transfert</fullName>
            </value>
            <value>
                <fullName>Sinistre</fullName>
            </value>
            <value>
                <fullName>Réclamation</fullName>
            </value>
            <value>
                <fullName>Autres</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>