service/main/default/objects/Case/fields/SendForm__c.field-meta.xml
<CustomField>
    <fullName>SendForm__c</fullName>
    <complianceGroup>RGPD</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Determine whether to automatically send a form to precise the case qualification or not.</description>
    <label>Send Form</label>
    <type>Checkbox</type>
</CustomField>