service/main/default/objects/Case/fields/Siren__c.field-meta.xml
<CustomField>
    <fullName>Siren__c</fullName>
    <description>Company&#39;s Siren number</description>
    <label>Siren</label>
    <length>9</length>
    <type>Text</type>
</CustomField>