service/main/default/objects/Case/fields/VehicleRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleRegistrationNumber__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Registration number for the vehicle related to the case.</description>
    <label>Vehicle Registration Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>