service/main/default/objects/Case/recordTypes/Service_MajorAccounts.recordType-meta.xml
<RecordType>
    <fullName>Service_MajorAccounts</fullName>
    <active>true</active>
    <businessProcess>Service</businessProcess>
    <description>Record type for Service Major Accounts cases.</description>
    <label>Service - Major Accounts</label>
</RecordType>