service/main/default/objects/Case/recordTypes/Service_PublicDeals.recordType-meta.xml
<RecordType>
    <fullName>Service_PublicDeals</fullName>
    <active>true</active>
    <businessProcess>Service</businessProcess>
    <description>Record type for Service Public Deals cases.</description>
    <label>Service - Public Deals</label>
</RecordType>