service/main/default/objects/Case/recordTypes/Service_Restitutions.recordType-meta.xml
<RecordType>
    <fullName>Service_Restitutions</fullName>
    <active>true</active>
    <businessProcess>Service</businessProcess>
    <description>Record type for Service Services cases.</description>
    <label>Service - Restitutions</label>
</RecordType>