service/main/default/objects/Case/recordTypes/Service_Services.recordType-meta.xml
<RecordType>
    <fullName>Service_Services</fullName>
    <active>true</active>
    <businessProcess>Service</businessProcess>
    <description>Record type for Service Services cases.</description>
    <label>Service - Services</label>
</RecordType>